plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

sourceCompatibility = '11'

repositories {
	mavenCentral()
	maven {
		url 'https://jitpack.io'
	}
}

jar {
    enabled = false
}

dependencies {
	implementation('com.github.JackSilence:magic:6854f731a6')
	
	implementation('org.springframework.retry:spring-retry:1.2.2.RELEASE')
	implementation('org.aspectj:aspectjweaver:1.8.9')
	implementation('com.sendgrid:sendgrid-java:4.0.1')
	implementation('org.apache.commons:commons-text:1.6')
}
